--- a/app/src/main/res/layout/pusheen_layout.xml
+++ b/app/src/main/res/layout/pusheen_layout.xml
@@ -4,14 +4,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+
+        <variable
+            name="viewModel"
+            type="ru.demo.catapplication.viewmodel.PusheenViewModel"/>
+    </data>
+
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp">
+        android:layout_marginBottom="4dp"
+        android:layout_marginTop="4dp">
 
         <android.support.constraint.ConstraintLayout
+            android:background="?android:attr/selectableItemBackground"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:onClick="@{() -> viewModel.onClick()}">
 
             <ImageView
                 android:id="@+id/image_view"
@@ -28,15 +38,17 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
+                android:text="@{viewModel.name}"
                 app:layout_constraintLeft_toRightOf="@id/image_view"
                 app:layout_constraintTop_toTopOf="@id/image_view"
-                tools:text="Posheen"/>
+                tools:text="Pusheen"/>
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
+                android:text="@{viewModel.description}"
                 app:layout_constraintLeft_toRightOf="@id/image_view"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/name_text_view"
