--- a/app/src/main/res/layout/pusheen_layout.xml
+++ b/app/src/main/res/layout/pusheen_layout.xml
@@ -18,16 +18,16 @@
         android:layout_marginTop="4dp">
 
         <android.support.constraint.ConstraintLayout
-            android:background="?android:attr/selectableItemBackground"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="?android:attr/selectableItemBackground"
             android:onClick="@{() -> viewModel.onClick()}">
 
             <ImageView
                 android:id="@+id/image_view"
                 android:layout_width="96dp"
                 android:layout_height="96dp"
-                android:layout_margin="16dp"
+                android:layout_marginStart="16dp"
                 android:src="@drawable/pusheen"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
@@ -37,7 +37,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
+                android:paddingTop="16dp"
                 android:text="@{viewModel.name}"
                 app:layout_constraintLeft_toRightOf="@id/image_view"
                 app:layout_constraintTop_toTopOf="@id/image_view"
@@ -46,8 +46,9 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                android:layout_marginStart="16dp"
+                android:paddingEnd="16dp"
+                android:paddingStart="16dp"
+                android:paddingTop="8dp"
                 android:text="@{viewModel.description}"
                 app:layout_constraintLeft_toRightOf="@id/image_view"
                 app:layout_constraintRight_toRightOf="parent"
@@ -56,4 +57,5 @@
 
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
+
 </layout>
