--- a/app/src/main/res/layout/unicorn_layout.xml
+++ b/app/src/main/res/layout/unicorn_layout.xml
@@ -18,29 +18,29 @@
         android:layout_marginTop="4dp">
 
         <android.support.constraint.ConstraintLayout
-            android:background="?android:attr/selectableItemBackground"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="?android:attr/selectableItemBackground"
             android:onClick="@{() -> viewModel.onClick()}">
 
             <ImageView
                 android:id="@+id/image_view"
                 android:layout_width="96dp"
                 android:layout_height="96dp"
-                android:layout_margin="16dp"
                 android:src="@drawable/unicorn"
                 app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
 
             <TextView
                 android:id="@+id/name_text_view"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
+                android:gravity="center"
                 android:text="@{viewModel.name}"
-                app:layout_constraintLeft_toRightOf="@id/image_view"
-                app:layout_constraintTop_toTopOf="@id/image_view"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/image_view"
                 tools:text="Unicorn"/>
 
             <TextView
@@ -48,12 +48,16 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
+                android:gravity="center"
+                android:paddingBottom="16dp"
+                android:paddingTop="8dp"
                 android:text="@{viewModel.description}"
-                app:layout_constraintLeft_toRightOf="@id/image_view"
+                app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/name_text_view"
                 tools:text="This is cat!"/>
 
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
+
 </layout>
