Replace ass to cat

--- a/app/src/main/res/layout/fire_cat_layout.xml
+++ b/app/src/main/res/layout/fire_cat_layout.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="ru.demo.catapplication.viewmodel.FireAddCatViewModel"/>
+            type="ru.demo.catapplication.viewmodel.FireCatViewModel"/>
     </data>
 
     <android.support.v7.widget.CardView
